z-index fix

--- a/about.css
+++ b/about.css
@@ -24,7 +24,8 @@ body {
   top: 40px;
   right: 60px;
   cursor: pointer;
-  z-index: 999;
+  z-index: 3;
+  animation: slideLeft 1s ease forwards;
 }
 
 .menuBox {
@@ -40,6 +41,7 @@ body {
   overflow: hidden;
   border-bottom-left-radius: 100%;
   transition: width 0.5s, height 0.5s, border-radius 0.5s;
+  z-index: 2;
 }
 
 .menuBox.openMenu {
@@ -114,7 +116,6 @@ body {
   transform:prespective(1000px) translate(-50%,-50%);
   transform:skewY(15deg);
   transition:0.5s;
-  z-index: -1;
 }
 
 .title:hover{
@@ -161,7 +162,6 @@ body {
 
 .collab {
   position: relative;
-  z-index: -1;
   top: 20vh;
   left: 10vh;
   cursor: default;
@@ -177,7 +177,6 @@ body {
   font-size: 15px;
   letter-spacing: 0.2em;
   cursor: default;
-  z-index: -1;
 }
 
 .team{
@@ -198,7 +197,6 @@ body {
   transform:prespective(1000px) translate(-50%,-50%);
   transform:skewY(3deg);
   transition:0.5s;
-  z-index: -1;
 }
 
 .title2:hover{
@@ -320,4 +318,17 @@ body {
 
 .card:hover .img-container {
   transform: scale(1.15);
+}
+
+/* Animation*/
+
+@keyframes slideLeft {
+  0% {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
