--- a/comic.css
+++ b/comic.css
@@ -41,7 +41,8 @@ img {
   top: 40px;
   right: 60px;
   cursor: pointer;
-  z-index: 999;
+  z-index: 3;
+  animation: slideLeft 1s ease forwards;
 }
 
 .menuBox {
@@ -57,6 +58,7 @@ img {
   overflow: hidden;
   border-bottom-left-radius: 100%;
   transition: width 0.5s, height 0.5s, border-radius 0.5s;
+  z-index: 2;
 }
 
 .menuBox.openMenu {
@@ -141,6 +143,19 @@ img {
   padding: 5px 10px;
   border-radius: 20px;
   z-index: 1;
+}
+
+/* Animation*/
+
+@keyframes slideLeft {
+  0% {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 @media
